fixes to modify some text in youtube embed. also brought up dependencies and compiled with java 9-ea+169